# ai_engineering

./: .gitignore  CLAUDE.md
FastAPI/projects/fastapi_concepts_hands_on/: .env.example  01_hello_world.py  02_working_with_path_parameters.py  03_working_with_query_parameters.py  04_working_with_request_body_and_pydantic.py  05_working_with_response_status_codes.py  06_1_working_with_dependency.py  06_2_working_with_db_session_dependency.py  06_3_working_with_dependency_chain.py  06_4_working_with_dependency_caching.py  07_1_working_with_error_handling_basic.py  07_2_working_with_error_handling_custom_exception_class_intro.py  07_3_working_with_error_handling_global_exception_handlers.py  07_4_working_with_error_handling_global_exception_with_request_context.py  08_1_working_with_cors_middleware.py  08_2_working_with_requestId_middleware.py  08_3_working_with_timing_middleware.py  08_4_working_with_complete_middleware_stack.py  09_1_working_with_async_basics.py  09_2_working_with_asyncio_gather.py  09_3_working_with_asyncio_wait_for.py  09_4_working_with_background_tasks.py  09_5_working_with_asyncio_wait.py  10_1_working_with_database_sqlalchemy.py  10_2_working_with_database_sqlalchemy_data_models.py  10_3_working_with_database_crud_pagination.py  10_4_working_with_database_token_usage_tracking.py  10_5_working_with_databse_supabase_client.py  10_6_working_with_database_pgvector_embeddings.py  10_7_working_with_database_redis_caching.py  10_8_working_with_database_redis_caching_advanced.py  main.py  mini_project_01.py  mini_project_02.py  pyproject.toml
Prompting/meta_prompting/: DSPy_Complete_Guide.md  DSPy_Intro.ipynb  DsPy_basics.md  README.md  main.py  mydb.sqlite  pyproject.toml
RAG/rag_lab/: ARCHITECTURE.md  pyproject.toml
RAG/rag_lab/components/: __init__.py  base.py  chunking.py  embeddings.py  evaluation.py  generation.py  ingestion.py  reranking.py  retrieval.py  vectordb.py
RAG/rag_lab/configs/: __init__.py  rag_config.py
RAG/rag_lab/corpus/: embedding_models_guide.html  llm_evaluation.txt  llm_pipeline_code.py  rag_advanced_techniques.md  retrieval_augmented_generation.txt  test_questions.json  test_questions_code.json  test_questions_html.json  test_questions_markdown.json  vector_databases.txt
RAG/rag_lab/experiments/: exp_01_baseline.py  exp_02_contextual_enrichment.py  exp_02_html.py  exp_03_2_e5.py  (+24 more)
(+234 files in other folders)
