[project]
name = "fastapi-concepts-hands-on"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.128.8",
    "greenlet>=3.3.1",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.46",
    "supabase>=2.0.0",
    "upstash-redis>=1.0.0",
    "uvicorn>=0.40.0",
]
